Fixed core plugin ui file

--- a/trunk/sim-qt4/plugins/_core/cfgdlgbase.ui
+++ b/trunk/sim-qt4/plugins/_core/cfgdlgbase.ui
@@ -134,7 +134,7 @@
     <customwidget>
       <class>QWidgetStack</class>
       <extends></extends>
-      <header location="local" >qwidgetstack.h</header>
+      <header location="local" >QStackedWidget</header>
       <sizehint>
         <width>-1</width>
         <height>-1</height>
