Continued qt4 port Fixed wrong QDialog functions assigment Icons selection ported to new QT4 resource system

--- a/trunk/sim-qt4/plugins/_core/cfgdlgbase.ui
+++ b/trunk/sim-qt4/plugins/_core/cfgdlgbase.ui
@@ -134,7 +134,7 @@
     <customwidget>
       <class>QWidgetStack</class>
       <extends></extends>
-      <header location="local" >QStackedWidget</header>
+      <header location="local" >Q3WidgetStack</header>
       <sizehint>
         <width>-1</width>
         <height>-1</height>
