--- a/trunk/sim-qt4/plugins/_core/editphonebase.ui
+++ b/trunk/sim-qt4/plugins/_core/editphonebase.ui
@@ -136,7 +136,7 @@
     <customwidget>
       <class>QWidgetStack</class>
       <extends></extends>
-      <header location="local" >qwidgetstack.h</header>
+      <header location="local" >Q3WidgetStack</header>
       <sizehint>
         <width>-1</width>
         <height>-1</height>
