--- a/trunk/sim-qt4/plugins/_core/searchbase.ui
+++ b/trunk/sim-qt4/plugins/_core/searchbase.ui
@@ -115,7 +115,7 @@
     <customwidget>
       <class>QWidgetStack</class>
       <extends></extends>
-      <header location="global" >qwidgetstack.h</header>
+      <header location="global" >Q3WidgetStack</header>
       <sizehint>
         <width>-1</width>
         <height>-1</height>
