--- a/trunk/sim/plugins/icq/verifydlgbase.ui
+++ b/trunk/sim/plugins/icq/verifydlgbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.3" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
 <class>VerifyDlgBase</class>
 <widget class="QDialog">
     <property name="name">
@@ -9,7 +9,7 @@
             <x>0</x>
             <y>0</y>
             <width>317</width>
-            <height>228</height>
+            <height>231</height>
         </rect>
     </property>
     <property name="caption">
@@ -50,6 +50,9 @@
                 <widget class="QLabel">
                     <property name="name">
                         <cstring>lblPicture</cstring>
+                    </property>
+                    <property name="enabled">
+                        <bool>true</bool>
                     </property>
                     <property name="sizePolicy">
                         <sizepolicy>
