--- a/trunk/sim/plugins/sound/soundconfigbase.ui
+++ b/trunk/sim/plugins/sound/soundconfigbase.ui
@@ -6,25 +6,25 @@
         <name>name</name>
         <cstring>Form1</cstring>
     </property>
-    <property>
+    <property stdset="1">
         <name>geometry</name>
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>413</width>
+            <width>409</width>
             <height>204</height>
         </rect>
     </property>
-    <property>
+    <property stdset="1">
         <name>caption</name>
         <string>Form1</string>
     </property>
     <grid>
-        <property>
+        <property stdset="1">
             <name>margin</name>
             <number>11</number>
         </property>
-        <property>
+        <property stdset="1">
             <name>spacing</name>
             <number>6</number>
         </property>
@@ -34,9 +34,13 @@
                 <name>name</name>
                 <cstring>chkArts</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>text</name>
-                <string>&amp;Use artsd</string>
+                <string>&amp;Use KDE sound settings</string>
+            </property>
+            <property>
+                <name>toolTip</name>
+                <string>Use player defined in system notify settings in kcontrol</string>
             </property>
         </widget>
         <widget row="1"  column="0"  rowspan="1"  colspan="2" >
@@ -45,7 +49,7 @@
                 <name>name</name>
                 <cstring>lblPlayer</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>text</name>
                 <string>Player:</string>
             </property>
@@ -62,11 +66,11 @@
                 <name>name</name>
                 <cstring>Spacer2</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>orientation</name>
                 <enum>Vertical</enum>
             </property>
-            <property>
+            <property stdset="1">
                 <name>sizeType</name>
                 <enum>Expanding</enum>
             </property>
@@ -84,11 +88,11 @@
                 <name>name</name>
                 <cstring>TextLabel1</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>text</name>
                 <string>File transfer done:</string>
             </property>
-            <property>
+            <property stdset="1">
                 <name>alignment</name>
                 <set>AlignVCenter|AlignRight</set>
             </property>
@@ -102,11 +106,11 @@
                 <name>name</name>
                 <cstring>TextLabel1_2</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>text</name>
                 <string>Message sent:</string>
             </property>
-            <property>
+            <property stdset="1">
                 <name>alignment</name>
                 <set>AlignVCenter|AlignRight</set>
             </property>
@@ -120,11 +124,11 @@
                 <name>name</name>
                 <cstring>TextLabel2</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>text</name>
                 <string>Sound on startup:</string>
             </property>
-            <property>
+            <property stdset="1">
                 <name>alignment</name>
                 <set>AlignVCenter|AlignRight</set>
             </property>
