--- a/trunk/sim/plugins/_core/plugincfgbase.ui
+++ b/trunk/sim/plugins/_core/plugincfgbase.ui
@@ -4,7 +4,7 @@
     <class>QWidget</class>
     <property stdset="1">
         <name>name</name>
-        <cstring>Form1</cstring>
+        <cstring>PluginCfgBase</cstring>
     </property>
     <property>
         <name>geometry</name>
