--- a/trunk/sim/plugins/_core/interfacecfgbase.ui
+++ b/trunk/sim/plugins/_core/interfacecfgbase.ui
@@ -6,25 +6,25 @@
         <name>name</name>
         <cstring>Interface</cstring>
     </property>
-    <property>
+    <property stdset="1">
         <name>geometry</name>
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>417</width>
-            <height>352</height>
+            <width>413</width>
+            <height>413</height>
         </rect>
     </property>
-    <property>
+    <property stdset="1">
         <name>caption</name>
         <string>Form1</string>
     </property>
     <vbox>
-        <property>
+        <property stdset="1">
             <name>margin</name>
             <number>11</number>
         </property>
-        <property>
+        <property stdset="1">
             <name>spacing</name>
             <number>6</number>
         </property>
@@ -34,7 +34,7 @@
                 <name>name</name>
                 <cstring>TextLabel1_2</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>text</name>
                 <string>Language:</string>
             </property>
@@ -45,7 +45,7 @@
                 <name>name</name>
                 <cstring>cmbLang</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>sizePolicy</name>
                 <sizepolicy>
                     <hsizetype>7</hsizetype>
@@ -59,16 +59,16 @@
                 <name>name</name>
                 <cstring>grpMode</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>title</name>
                 <string>Message window</string>
             </property>
             <vbox>
-                <property>
+                <property stdset="1">
                     <name>margin</name>
                     <number>11</number>
                 </property>
-                <property>
+                <property stdset="1">
                     <name>spacing</name>
                     <number>6</number>
                 </property>
@@ -78,7 +78,7 @@
                         <name>name</name>
                         <cstring>btnChat</cstring>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>text</name>
                         <string>&amp;Simple mode</string>
                     </property>
@@ -89,7 +89,7 @@
                         <name>name</name>
                         <cstring>btnSimple</cstring>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>text</name>
                         <string>&amp;Chat mode</string>
                     </property>
@@ -100,7 +100,7 @@
                         <name>name</name>
                         <cstring>chkSaveFont</cstring>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>text</name>
                         <string>&amp;Using last selected font</string>
                     </property>
@@ -113,16 +113,16 @@
                 <name>name</name>
                 <cstring>grpContainer</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>title</name>
                 <string>Container mode</string>
             </property>
             <vbox>
-                <property>
+                <property stdset="1">
                     <name>margin</name>
                     <number>11</number>
                 </property>
-                <property>
+                <property stdset="1">
                     <name>spacing</name>
                     <number>6</number>
                 </property>
@@ -132,7 +132,7 @@
                         <name>name</name>
                         <cstring>btnNew</cstring>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>text</name>
                         <string>Open each contact in &amp;new container</string>
                     </property>
@@ -143,7 +143,7 @@
                         <name>name</name>
                         <cstring>btnGroup</cstring>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>text</name>
                         <string>Open one container for &amp;group</string>
                     </property>
@@ -154,7 +154,7 @@
                         <name>name</name>
                         <cstring>btnOne</cstring>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>text</name>
                         <string>Open all contacts in &amp;one container</string>
                     </property>
@@ -165,7 +165,7 @@
                         <name>name</name>
                         <cstring>chkEnter</cstring>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>text</name>
                         <string>Use "&amp;Enter" for send message</string>
                     </property>
@@ -177,11 +177,11 @@
                         <cstring>Layout2</cstring>
                     </property>
                     <hbox>
-                        <property>
+                        <property stdset="1">
                             <name>margin</name>
                             <number>0</number>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>spacing</name>
                             <number>6</number>
                         </property>
@@ -191,11 +191,11 @@
                                 <name>name</name>
                                 <cstring>lblCopy1</cstring>
                             </property>
-                            <property>
+                            <property stdset="1">
                                 <name>backgroundOrigin</name>
                                 <enum>ParentOrigin</enum>
                             </property>
-                            <property>
+                            <property stdset="1">
                                 <name>text</name>
                                 <string></string>
                             </property>
@@ -206,7 +206,7 @@
                                 <name>name</name>
                                 <cstring>spnCopy</cstring>
                             </property>
-                            <property>
+                            <property stdset="1">
                                 <name>maxValue</name>
                                 <number>20</number>
                             </property>
@@ -217,18 +217,18 @@
                                 <name>name</name>
                                 <cstring>lblCopy2</cstring>
                             </property>
-                            <property>
+                            <property stdset="1">
                                 <name>sizePolicy</name>
                                 <sizepolicy>
                                     <hsizetype>1</hsizetype>
                                     <vsizetype>1</vsizetype>
                                 </sizepolicy>
                             </property>
-                            <property>
+                            <property stdset="1">
                                 <name>backgroundOrigin</name>
                                 <enum>ParentOrigin</enum>
                             </property>
-                            <property>
+                            <property stdset="1">
                                 <name>text</name>
                                 <string></string>
                             </property>
@@ -238,11 +238,11 @@
                                 <name>name</name>
                                 <cstring>Spacer2_2</cstring>
                             </property>
-                            <property>
+                            <property stdset="1">
                                 <name>orientation</name>
                                 <enum>Horizontal</enum>
                             </property>
-                            <property>
+                            <property stdset="1">
                                 <name>sizeType</name>
                                 <enum>Expanding</enum>
                             </property>
@@ -256,6 +256,17 @@
                         </spacer>
                     </hbox>
                 </widget>
+                <widget>
+                    <class>QCheckBox</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>chkOwnerName</cstring>
+                    </property>
+                    <property stdset="1">
+                        <name>text</name>
+                        <string>Show own nickname in window title</string>
+                    </property>
+                </widget>
             </vbox>
         </widget>
         <widget>
@@ -264,7 +275,7 @@
                 <name>name</name>
                 <cstring>chkStart</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>text</name>
                 <string>Start SIM on every &amp;windows startup</string>
             </property>
@@ -274,11 +285,11 @@
                 <name>name</name>
                 <cstring>Spacer2</cstring>
             </property>
-            <property>
+            <property stdset="1">
                 <name>orientation</name>
                 <enum>Vertical</enum>
             </property>
-            <property>
+            <property stdset="1">
                 <name>sizeType</name>
                 <enum>Expanding</enum>
             </property>
