--- a/trunk/sim/plugins/livejournal/livejournalcfgbase.ui
+++ b/trunk/sim/plugins/livejournal/livejournalcfgbase.ui
@@ -6,25 +6,25 @@
         <name>name</name>
         <cstring>LiveJournalCfg</cstring>
     </property>
-    <property>
+    <property stdset="1">
         <name>geometry</name>
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>326</width>
+            <width>322</width>
             <height>265</height>
         </rect>
     </property>
-    <property>
+    <property stdset="1">
         <name>caption</name>
         <string>Form1</string>
     </property>
     <vbox>
-        <property>
+        <property stdset="1">
             <name>margin</name>
             <number>11</number>
         </property>
-        <property>
+        <property stdset="1">
             <name>spacing</name>
             <number>6</number>
         </property>
@@ -45,11 +45,11 @@
                     <string>&amp;LiveJournal</string>
                 </attribute>
                 <grid>
-                    <property>
+                    <property stdset="1">
                         <name>margin</name>
                         <number>11</number>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>spacing</name>
                         <number>6</number>
                     </property>
@@ -59,11 +59,11 @@
                             <name>name</name>
                             <cstring>TextLabel1</cstring>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>text</name>
                             <string>Username:</string>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>alignment</name>
                             <set>AlignVCenter|AlignRight</set>
                         </property>
@@ -84,11 +84,11 @@
                             <name>name</name>
                             <cstring>lblPassword</cstring>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>text</name>
                             <string>Password:</string>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>alignment</name>
                             <set>AlignVCenter|AlignRight</set>
                         </property>
@@ -102,7 +102,7 @@
                             <name>name</name>
                             <cstring>edtPassword</cstring>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>echoMode</name>
                             <enum>Password</enum>
                         </property>
@@ -112,11 +112,11 @@
                             <name>name</name>
                             <cstring>Spacer8</cstring>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>orientation</name>
                             <enum>Vertical</enum>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>sizeType</name>
                             <enum>Expanding</enum>
                         </property>
@@ -148,11 +148,11 @@
                     <string>&amp;Network</string>
                 </attribute>
                 <grid>
-                    <property>
+                    <property stdset="1">
                         <name>margin</name>
                         <number>11</number>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>spacing</name>
                         <number>6</number>
                     </property>
@@ -169,11 +169,11 @@
                             <name>name</name>
                             <cstring>TextLabel3</cstring>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>text</name>
                             <string>Server:</string>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>alignment</name>
                             <set>AlignVCenter|AlignRight</set>
                         </property>
@@ -187,11 +187,11 @@
                             <name>name</name>
                             <cstring>TextLabel4</cstring>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>text</name>
                             <string>Path:</string>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>alignment</name>
                             <set>AlignVCenter|AlignRight</set>
                         </property>
@@ -212,11 +212,11 @@
                             <name>name</name>
                             <cstring>TextLabel5</cstring>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>text</name>
                             <string>Port:</string>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>alignment</name>
                             <set>AlignVCenter|AlignRight</set>
                         </property>
@@ -230,11 +230,11 @@
                             <name>name</name>
                             <cstring>edtPort</cstring>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>maxValue</name>
                             <number>65535</number>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>minValue</name>
                             <number>1</number>
                         </property>
@@ -244,11 +244,11 @@
                             <name>name</name>
                             <cstring>Spacer9</cstring>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>orientation</name>
                             <enum>Horizontal</enum>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>sizeType</name>
                             <enum>Expanding</enum>
                         </property>
@@ -265,11 +265,11 @@
                             <name>name</name>
                             <cstring>Spacer10</cstring>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>orientation</name>
                             <enum>Vertical</enum>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>sizeType</name>
                             <enum>Expanding</enum>
                         </property>
@@ -293,68 +293,107 @@
                     <name>title</name>
                     <string>&amp;Options</string>
                 </attribute>
-                <grid>
-                    <property>
+                <vbox>
+                    <property stdset="1">
                         <name>margin</name>
                         <number>11</number>
                     </property>
-                    <property>
+                    <property stdset="1">
                         <name>spacing</name>
                         <number>6</number>
                     </property>
-                    <widget row="0"  column="0" >
-                        <class>QLabel</class>
+                    <widget>
+                        <class>QLayoutWidget</class>
                         <property stdset="1">
                             <name>name</name>
-                            <cstring>TextLabel1_2</cstring>
+                            <cstring>Layout1</cstring>
                         </property>
-                        <property>
+                        <hbox>
+                            <property stdset="1">
+                                <name>margin</name>
+                                <number>0</number>
+                            </property>
+                            <property stdset="1">
+                                <name>spacing</name>
+                                <number>6</number>
+                            </property>
+                            <widget>
+                                <class>QLabel</class>
+                                <property stdset="1">
+                                    <name>name</name>
+                                    <cstring>TextLabel1_2</cstring>
+                                </property>
+                                <property stdset="1">
+                                    <name>text</name>
+                                    <string>Check interval:</string>
+                                </property>
+                                <property stdset="1">
+                                    <name>alignment</name>
+                                    <set>AlignVCenter|AlignRight</set>
+                                </property>
+                                <property>
+                                    <name>hAlign</name>
+                                </property>
+                            </widget>
+                            <widget>
+                                <class>QSpinBox</class>
+                                <property stdset="1">
+                                    <name>name</name>
+                                    <cstring>edtInterval</cstring>
+                                </property>
+                            </widget>
+                            <widget>
+                                <class>QLabel</class>
+                                <property stdset="1">
+                                    <name>name</name>
+                                    <cstring>TextLabel2_2</cstring>
+                                </property>
+                                <property stdset="1">
+                                    <name>sizePolicy</name>
+                                    <sizepolicy>
+                                        <hsizetype>7</hsizetype>
+                                        <vsizetype>1</vsizetype>
+                                    </sizepolicy>
+                                </property>
+                                <property stdset="1">
+                                    <name>text</name>
+                                    <string>minutes</string>
+                                </property>
+                            </widget>
+                        </hbox>
+                    </widget>
+                    <widget>
+                        <class>QCheckBox</class>
+                        <property stdset="1">
+                            <name>name</name>
+                            <cstring>chkFastServer</cstring>
+                        </property>
+                        <property stdset="1">
                             <name>text</name>
-                            <string>Check interval:</string>
-                        </property>
-                        <property>
-                            <name>alignment</name>
-                            <set>AlignVCenter|AlignRight</set>
-                        </property>
-                        <property>
-                            <name>hAlign</name>
+                            <string>Use &amp;fast server - only for paying customers</string>
                         </property>
                     </widget>
-                    <widget row="0"  column="1" >
-                        <class>QSpinBox</class>
+                    <widget>
+                        <class>QCheckBox</class>
                         <property stdset="1">
                             <name>name</name>
-                            <cstring>edtInterval</cstring>
+                            <cstring>chkUseFormatting</cstring>
                         </property>
-                    </widget>
-                    <widget row="0"  column="2" >
-                        <class>QLabel</class>
                         <property stdset="1">
-                            <name>name</name>
-                            <cstring>TextLabel2_2</cstring>
-                        </property>
-                        <property>
-                            <name>sizePolicy</name>
-                            <sizepolicy>
-                                <hsizetype>7</hsizetype>
-                                <vsizetype>1</vsizetype>
-                            </sizepolicy>
-                        </property>
-                        <property>
                             <name>text</name>
-                            <string>minutes</string>
+                            <string>Use formatted messages</string>
                         </property>
                     </widget>
-                    <spacer row="2"  column="1" >
+                    <spacer>
                         <property>
                             <name>name</name>
                             <cstring>Spacer5</cstring>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>orientation</name>
                             <enum>Vertical</enum>
                         </property>
-                        <property>
+                        <property stdset="1">
                             <name>sizeType</name>
                             <enum>Expanding</enum>
                         </property>
@@ -366,18 +405,7 @@
                             </size>
                         </property>
                     </spacer>
-                    <widget row="1"  column="0"  rowspan="1"  colspan="3" >
-                        <class>QCheckBox</class>
-                        <property stdset="1">
-                            <name>name</name>
-                            <cstring>chkFastServer</cstring>
-                        </property>
-                        <property>
-                            <name>text</name>
-                            <string>Use &amp;fast server - only for paying customers</string>
-                        </property>
-                    </widget>
-                </grid>
+                </vbox>
             </widget>
         </widget>
     </vbox>
