--- a/trunk/sim/plugins/livejournal/livejournalcfgbase.ui
+++ b/trunk/sim/plugins/livejournal/livejournalcfgbase.ui
@@ -12,7 +12,7 @@
             <x>0</x>
             <y>0</y>
             <width>322</width>
-            <height>265</height>
+            <height>280</height>
         </rect>
     </property>
     <property stdset="1">
@@ -382,6 +382,31 @@
                         <property stdset="1">
                             <name>text</name>
                             <string>Use formatted messages</string>
+                        </property>
+                    </widget>
+                    <widget>
+                        <class>QCheckBox</class>
+                        <property stdset="1">
+                            <name>name</name>
+                            <cstring>chkUseSignature</cstring>
+                        </property>
+                        <property stdset="1">
+                            <name>text</name>
+                            <string>Add signature to all messages</string>
+                        </property>
+                    </widget>
+                    <widget>
+                        <class>QMultiLineEdit</class>
+                        <property stdset="1">
+                            <name>name</name>
+                            <cstring>edtSignature</cstring>
+                        </property>
+                        <property stdset="1">
+                            <name>sizePolicy</name>
+                            <sizepolicy>
+                                <hsizetype>7</hsizetype>
+                                <vsizetype>4</vsizetype>
+                            </sizepolicy>
                         </property>
                     </widget>
                     <spacer>
