--- a/branches/0.9.4/plugins/_core/prefcfgbase.ui
+++ b/branches/0.9.4/plugins/_core/prefcfgbase.ui
@@ -4,7 +4,7 @@
     <class>QWidget</class>
     <property stdset="1">
         <name>name</name>
-        <cstring>Form1</cstring>
+        <cstring>PrefConfigBaseForm</cstring>
     </property>
     <property>
         <name>geometry</name>
@@ -17,7 +17,7 @@
     </property>
     <property>
         <name>caption</name>
-        <string>Form1</string>
+        <string>PrefConfigBaseForm</string>
     </property>
     <vbox>
         <property>
