sane caption for VerifyDlg

--- a/trunk/plugins/icq/verifydlgbase.ui
+++ b/trunk/plugins/icq/verifydlgbase.ui
@@ -13,7 +13,7 @@
         </rect>
     </property>
     <property name="caption">
-        <string>VerifyDlg</string>
+        <string>Verification Dialog</string>
     </property>
     <property name="sizeGripEnabled">
         <bool>true</bool>
