--- a/branches/0.9.4/plugins/jabber/jabberconfigbase.ui
+++ b/branches/0.9.4/plugins/jabber/jabberconfigbase.ui
@@ -651,6 +651,9 @@
                             <name>name</name>
                             <cstring>edtVHost</cstring>
                         </property>
+		                <property name="enabled">
+		                    <bool>false</bool>
+		                </property>
                     </widget>
                     <widget row="6"  column="0"  rowspan="1"  colspan="3" >
                         <class>QCheckBox</class>
