--- a/trunk/plugins/_core/interfacecfgbase.ui
+++ b/trunk/plugins/_core/interfacecfgbase.ui
@@ -11,7 +11,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>413</width>
+            <width>409</width>
             <height>413</height>
         </rect>
     </property>
@@ -265,6 +265,17 @@
                     <property stdset="1">
                         <name>text</name>
                         <string>Show own nickname in window title</string>
+                    </property>
+                </widget>
+                <widget>
+                    <class>QCheckBox</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>chkAvatar</cstring>
+                    </property>
+                    <property stdset="1">
+                        <name>text</name>
+                        <string>Show user avatar</string>
                     </property>
                 </widget>
             </vbox>
