Added new feature: CapsLED Message notification in N/A mode. Please test for Linux. If it not works, msg me, or fix ;)

--- a/trunk/plugins/osd/osdconfigbase.ui
+++ b/trunk/plugins/osd/osdconfigbase.ui
@@ -39,6 +39,17 @@
                 <string>Enable &amp;messages notification</string>
             </property>
         </widget>
+        <widget row="0"  column="1" >
+            <class>QCheckBox</class>
+            <property stdset="1">
+                <name>name</name>
+                <cstring>chkCapsLockFlash</cstring>
+            </property>
+            <property>
+                <name>text</name>
+                <string>Enable Caps-Lock notification in N/A state</string>
+            </property>
+        </widget>        
         <widget row="1"  column="0" >
             <class>QCheckBox</class>
             <property stdset="1">
